--- a/style.css
+++ b/style.css
@@ -1,102 +1,18 @@
-@charset "UTF-8";
+ @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-
-
-
-h1 {
-    
-   text-align: center;
-   
+body
+{background-color :yellowgreen;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 20px;
 }
-
-
-
-
-nav {
-
-    background-color: white;
-    padding: 15px;
-   
-
-    box-shadow: 0px 5px 5px white;
-    text-align: center;
-    font-size: 1.3;
-}
-nav > a {
-    color: rgb(0, 0, 0);
-    padding: 15px;
-    border-radius: 10px;
-    text-decoration: none;
-    font-weight: bold;
-    ;
-    transition-duration: .5s;
-    
-}
-nav > a:hover{
-
-     background-color:rgba(60, 63, 63, 0.432);
-    color:rgba(3, 3, 3, 0.979);
-    
-}
-
-main {
-    min-width: 250px;
-    max-width: 650px;
-    margin: auto;
-    
-    margin-bottom: 40px;
-    padding: 30px;
-    background-color: white;
-    box-shadow:   0px 0px 10px rgba(0, 0, 0, 0.356);
-    letter-spacing: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius:10px;
-    border-bottom-left-radius:10px ;
-    border-bottom-right-radius:10px ;
-   
-}
-
-main h1 {
-    color:#ffffff ;
-    font-family:bolder ;
-}
-
-main h2{
-
-    font-family: bolder;
-    color: #171b53;
-    font-size: 1.3em;
-    background-image: linear-gradient(to right,rgba(77, 73, 73, 0.836),transparent);
-    text-indent: 8px;
+h1 
+{color: maroon;
+   background-color: goldenrod;
 
 }
-
-main p{
-    margin: 15px 0px;
-    text-align: left;
-    text-indent: 10px;
-    font-size: 1em;
-    line-height: 15px }
-
-main strong {
-color:black ;
-font-weight: bold;
-
+h2 {
+    color: darkred;
 }
-main a {
-text-decoration: none;
-font-weight: bold;
-color:;
-background-color: ;
-padding: 2px 6px;
-}
-
-main img{
-    width: 10%;
-}
-main img.pequena{
-    max-width:350px ;
-    display: block;
-    margin: auto;
+p{
+    text-align: justify;
 }
